--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- ANIMATE -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <!-- FONTAWESOME -->
     <script
       src="https://kit.fontawesome.com/df59baf6b8.js"
