--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap"
       rel="stylesheet"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap');
+    </style>
+    
 
     <!-- ANIMATE -->
     <link
